fixed: process: problem in alignment of dynamic items in toolbox

--- a/source/FlowplaneExtensions/Content/css/asana.css
+++ b/source/FlowplaneExtensions/Content/css/asana.css
@@ -14,7 +14,7 @@
 	margin: 5px;
 	color:black;
 	font-family:helvetica;padding:0.5em;
-	font-size:0.9em;
+	font-size:12px;
 	-webkit-transition: all 0.05s linear; -moz-transition: all 0.05s linear; -o-transition: all 0.05s linear; transition: all 0.05s linear;
 }
 
