--- a/source/FlowplaneExtensions/Content/css/linkedin.css
+++ b/source/FlowplaneExtensions/Content/css/linkedin.css
@@ -13,7 +13,7 @@
 	margin-right: 17px;
 	color:black;
 	font-family:helvetica;padding:0.5em;
-	font-size:0.9em;
+	font-size:12px;
 	-webkit-transition: all 0.05s linear; -moz-transition: all 0.05s linear; -o-transition: all 0.05s linear; transition: all 0.05s linear;
 }
 
